    test case.
  * debian/local/ubuntu-bug: Fix invocation with "--help". (LP: #305841)
  * apport/ui.py, load_report(): Clearer error message if report file does not
    exist. (LP: #204198)
  * Remove redundant verbiage from test suite docstrings.
  * apport/report.py, anonymize(): Fix crash when processing root-owned
    reports. (LP: #338033)

 -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 05 Mar 2009 11:50:57 +0100

apport (0.141) jaunty; urgency=low

  * apport/hookutils.py: Add cups error log to attach_printing()

 -- Brian Murray <brian@ubuntu.com>  Mon, 02 Mar 2009 10:55:53 -0800

apport (0.140) jaunty; urgency=low

  * debian/python-{apport,problem-report}.install: Fix site-packages →
    *-packages.
  * run-tests: Only check for local packaging_impl.py if running local tests.
    This unbreaks running tests from /usr/share/apport/testsuite/.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 02 Mar 2009 11:56:59 +0100

apport (0.139) jaunty; urgency=low

  * apport/report.py, anonymize(): Do not anonymize "root". (Side
    issue in LP #333542)
  * debian/rules: Supply --install-layout=deb to setup.py.
  * debian/local/apport-collect: Attach new info to
    staging.launchpad.net if $APPORT_STAGING is defined. This makes
    testing easier. Describe in debian/local/apport-collect.1.
  * debian/local/apport-collect: Ignore ValueErrors from
    add_package_info(), which happens if the bug has a source package
    task which does not have an identically named binary package name.
    Slightly ugly, but it's nontrivial to do that in a sensible
    manner; let's just fix the crash for now, since the focus of this
    tool is to collect information from hooks. (LP: #334823)
  * apport/hookutils.py, hal_dump_udi(): Filter out serial numbers. 
    (Mentioned in LP #107103)

 -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 02 Mar 2009 11:36:18 +0100

apport (0.138) jaunty; urgency=low

  * apport/crashdb_impl/launchpad.py: Consider an useful stack trace